--- a/thumbor.conf
+++ b/thumbor.conf
@@ -1,25 +1,25 @@
 import os
 import urlparse
 
-DETECTORS = [
-	'thumbor.detectors.face_detector',
-	'thumbor.detectors.feature_detector',
-]
+DETECTORS = []
 
-SECURITY_KEY = os.environ.get('THUMBOR_SECURITY_KEY', 'override me')
+SECURITY_KEY = os.environ.get('THUMBOR_SECURITY_KEY', 'NO-ONE-KNOW-WHAT-IS-LIKE-TO-BE-A-BATMAN')
 
-ALLOW_UNSAFE_URL = False
+ALLOW_UNSAFE_URL = True
 
-STORAGE = "thumbor.storages.mixed_storage"
-
-MIXED_STORAGE_FILE_STORAGE = "thumbor.storages.no_storage"
-MIXED_STORAGE_CRYPTO_STORAGE = "thumbor.storages.redis_storage"
-MIXED_STORAGE_DETECTOR_STORAGE = "thumbor.storages.redis_storage"
+STORAGE = "thumbor.storages.redis_storage"
 
 # Redis Storage
-redis_url = urlparse.urlparse(os.environ.get('REDISTOGO_URL', 'redis://localhost:6959'))
+redis_url = urlparse.urlparse(os.environ.get('REDIS_URL', 'redis://localhost:6959'))
 
 REDIS_STORAGE_SERVER_HOST = redis_url.hostname
 REDIS_STORAGE_SERVER_PORT = redis_url.port
 REDIS_STORAGE_SERVER_DB = 0
 REDIS_STORAGE_SERVER_PASSWORD = redis_url.password
+
+RESULT_STORAGE_EXPIRATION_SECONDS = 0
+RESULT_STORAGE_STORES_UNSAFE = True
+UPLOAD_ENABLED = True
+UPLOAD_PHOTO_STORAGE = "thumbor.storages.redis_storage"
+UPLOAD_DELETE_ALLOWED = True
+UPLOAD_PUT_ALLOWED = True
