Preparando para instalar no heroku

--- a/thumbor.conf
+++ b/thumbor.conf
@@ -5,7 +5,7 @@ DETECTORS = []
 
 SECURITY_KEY = os.environ.get('THUMBOR_SECURITY_KEY', 'NO-ONE-KNOW-WHAT-IS-LIKE-TO-BE-A-BATMAN')
 
-ALLOW_UNSAFE_URL = True
+ALLOW_UNSAFE_URL = False
 
 STORAGE = "thumbor.storages.redis_storage"
 
@@ -18,7 +18,7 @@ REDIS_STORAGE_SERVER_DB = 0
 REDIS_STORAGE_SERVER_PASSWORD = redis_url.password
 
 RESULT_STORAGE_EXPIRATION_SECONDS = 0
-RESULT_STORAGE_STORES_UNSAFE = True
+RESULT_STORAGE_STORES_UNSAFE = False
 UPLOAD_ENABLED = True
 UPLOAD_PHOTO_STORAGE = "thumbor.storages.redis_storage"
 UPLOAD_DELETE_ALLOWED = True
