Instalando no Heroku #5

--- a/thumbor.conf
+++ b/thumbor.conf
@@ -5,7 +5,7 @@ DETECTORS = []
 
 SECURITY_KEY = os.environ.get('THUMBOR_SECURITY_KEY', 'NO-ONE-KNOW-WHAT-IS-LIKE-TO-BE-A-BATMAN')
 
-ALLOW_UNSAFE_URL = False
+ALLOW_UNSAFE_URL = True
 
 STORAGE = "tc_redis.storages.redis_storage"
 
