--- a/thumbor.conf
+++ b/thumbor.conf
@@ -7,7 +7,7 @@ SECURITY_KEY = os.environ.get('THUMBOR_SECURITY_KEY', 'NO-ONE-KNOW-WHAT-IS-LIKE-
 
 ALLOW_UNSAFE_URL = True
 
-STORAGE = "tc_redis.storages.redis_storage"
+STORAGE = "pgthumbor.storages.postgres"
 
 # Redis Storage
 redis_url = urlparse.urlparse(os.environ.get('REDIS_URL', 'redis://localhost:6959'))
@@ -20,6 +20,6 @@ REDIS_STORAGE_SERVER_PASSWORD = redis_url.password
 RESULT_STORAGE_EXPIRATION_SECONDS = 0
 RESULT_STORAGE_STORES_UNSAFE = False
 UPLOAD_ENABLED = True
-UPLOAD_PHOTO_STORAGE = "tc_redis.storages.redis_storage"
+UPLOAD_PHOTO_STORAGE = "pgthumbor.storages.postgres"
 UPLOAD_DELETE_ALLOWED = True
 UPLOAD_PUT_ALLOWED = True
